OW/force-app/main/default/objects/Opportunity/fields/OW_Assessment__c.field-meta.xml
<CustomField>
    <fullName>OW_Assessment__c</fullName>
    <label>Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>