OW/force-app/main/default/objects/Opportunity/fields/OW_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>OW_Closed_Lost_Reason__c</fullName>
    <label>Closed/Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Lost to GEO competitor</fullName>
            </value>
            <value>
                <fullName>Lost to LEO competitor</fullName>
            </value>
            <value>
                <fullName>Lost to MEO competitor</fullName>
            </value>
            <value>
                <fullName>Lost to Fiber/Microwave</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>