OW/force-app/main/default/objects/Opportunity/fields/OW_Closed_Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>OW_Closed_Lost_Reason_Detail__c</fullName>
    <label>Closed/Lost Reason Detail</label>
    <type>TextArea</type>
</CustomField>