OW/force-app/main/default/objects/Opportunity/fields/OW_Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>OW_Contract_Duration__c</fullName>
    <label>Contract Duration (Years)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>