OW/force-app/main/default/objects/Opportunity/fields/OW_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OW_Contract_End_Date__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>