OW/force-app/main/default/objects/Opportunity/fields/OW_Country__c.field-meta.xml
<CustomField>
    <fullName>OW_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Country</valueSetName>
    </valueSet>
</CustomField>