OW/force-app/main/default/objects/Opportunity/fields/OW_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>OW_Deal_Status__c</fullName>
    <label>Deal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>