OW/force-app/main/default/objects/Opportunity/fields/OW_DRC_Date__c.field-meta.xml
<CustomField>
    <fullName>OW_DRC_Date__c</fullName>
    <label>DRC Date</label>
    <type>Date</type>
</CustomField>