OW/force-app/main/default/objects/Opportunity/fields/OW_MOU_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OW_MOU_Due_Date__c</fullName>
    <label>MOU Due Date</label>
    <type>Date</type>
</CustomField>