OW/force-app/main/default/objects/Opportunity/fields/OW_Next_Steps_for_Opp__c.field-meta.xml
<CustomField>
    <fullName>OW_Next_Steps_for_Opp__c</fullName>
    <label>Next Steps for Opp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>