OW/force-app/main/default/objects/Opportunity/fields/OW_Other_Event__c.field-meta.xml
<CustomField>
    <fullName>OW_Other_Event__c</fullName>
    <description>To capture event name when Lead Source is &quot;Other Event&quot;; Use this option if event you attended is not pre-configured in the Trade show list.</description>
    <label>Other Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>