OW/force-app/main/default/objects/Opportunity/fields/OW_Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>OW_Pending_Reason__c</fullName>
    <label>Blockers</label>
    <type>TextArea</type>
</CustomField>