OW/force-app/main/default/objects/Opportunity/fields/OW_Region__c.field-meta.xml
<CustomField>
    <fullName>OW_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Region</valueSetName>
    </valueSet>
</CustomField>