OW/force-app/main/default/objects/Opportunity/fields/OW_Segment_Addressed__c.field-meta.xml
<CustomField>
    <fullName>OW_Segment_Addressed__c</fullName>
    <label>Segment Addressed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Segment_Address</valueSetName>
    </valueSet>
</CustomField>