OW/force-app/main/default/objects/Opportunity/fields/OW_Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>OW_Trade_Show__c</fullName>
    <label>Trade Show</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Trade_Show</valueSetName>
    </valueSet>
</CustomField>