OW/force-app/main/default/objects/Opportunity/fields/OW_Upside_Value__c.field-meta.xml
<CustomField>
    <fullName>OW_Upside_Value__c</fullName>
    <label>Total Expected Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>