OW/force-app/main/default/objects/Opportunity/recordTypes/OW_Distribution_Partner.recordType-meta.xml
<RecordType>
    <fullName>OW_Distribution_Partner</fullName>
    <active>true</active>
    <businessProcess>Distribution Partner</businessProcess>
    <label>Distribution Partner</label>
</RecordType>