OW/force-app/main/default/objects/Opportunity/recordTypes/OW_End_Customer.recordType-meta.xml
<RecordType>
    <fullName>OW_End_Customer</fullName>
    <active>true</active>
    <businessProcess>End Customer</businessProcess>
    <label>End Customer</label>
</RecordType>